--- a/.github/workflows/zip-pack.yml
+++ b/.github/workflows/zip-pack.yml
@@ -41,8 +41,8 @@ jobs:
         name: "v${{ steps.get_version.outputs.version }}"
         tag_name: "v${{ steps.get_version.outputs.version }}"
         files: |
-          PokeBedrock RES ${{ steps.get_version.outputs.version }}.mcpack
-          PokeBedrock RES ${{ steps.get_version.outputs.version }}.zip
+          PokeBedrock_RES_${{ steps.get_version.outputs.version }}.mcpack
+          PokeBedrock_RES_${{ steps.get_version.outputs.version }}.zip
           
         draft: false
 
@@ -60,5 +60,5 @@ jobs:
         embed-title: "[RES] Update v${{ steps.get_version.outputs.version }}"
         embed-description: "${{ steps.read_changelog.outputs.changelog }}"
         embed-url: "https://github.com/smell-of-curry/pokebedrock-res"
-        filename: "PokeBedrock RES ${{ steps.get_version.outputs.version }}.mcpack"
+        filename: "PokeBedrock_RES_${{ steps.get_version.outputs.version }}.mcpack"
       
